⚡️ Add lazy load to writings section images'

--- a/src/styles/_partials/_menu.scss
+++ b/src/styles/_partials/_menu.scss
@@ -206,7 +206,7 @@ nav.nav {
   }
 }
 
-@include mediaUpToSmallDevices {
+@include mediaUpToXtraSmallDevices {
   .c-hamburger--htx {
     right: 20px;
     top: 15px;
