--- a/public/prism/prism.css
+++ b/public/prism/prism.css
@@ -1,98 +1,1 @@
-code[class*=language-], pre[class*=language-] {
-  color: #FFF;
-  background: 0 0;
-  text-align: left;
-  white-space: pre;
-  word-spacing: normal;
-  word-break: normal;
-  word-wrap: normal;
-  line-height: 1.5;
-  -moz-tab-size: 4;
-  -o-tab-size: 4;
-  tab-size: 4;
-  -webkit-hyphens: none;
-  -moz-hyphens: none;
-  -ms-hyphens: none;
-  hyphens: none
-}
-
-code[class*=language-] ::-moz-selection, code[class*=language-]::-moz-selection, pre[class*=language-] ::-moz-selection, pre[class*=language-]::-moz-selection {
-  background: #b3d4fc
-}
-
-code[class*=language-] ::selection, code[class*=language-]::selection, pre[class*=language-] ::selection, pre[class*=language-]::selection {
-  background: #b3d4fc
-}
-
-@media print {
-  code[class*=language-], pre[class*=language-] {
-  }
-}
-
-pre[class*=language-] {
-  padding: 1em;
-  margin: .5em 0;
-  overflow: auto
-}
-
-:not(pre)>code[class*=language-], pre[class*=language-] {
-  background: #212121;
-}
-
-:not(pre)>code[class*=language-] {
-  padding: .1em;
-  border-radius: .3em;
-  white-space: normal
-}
-
-.token.cdata, .token.comment, .token.doctype, .token.prolog {
-  color: #708090
-}
-
-.token.punctuation {
-  color: #999
-}
-
-.namespace {
-  opacity: .7
-}
-
-.token.boolean, .token.constant, .token.deleted, .token.number, .token.property, .token.symbol, .token.tag {
-  color: #FF4081
-}
-
-.token.attr-name, .token.builtin, .token.char, .token.inserted, .token.selector, .token.string {
-  color: #D4E157
-}
-
-.language-css .token.string, .style .token.string, .token.entity, .token.operator, .token.url {
-  color: #c5c8c6;
-}
-
-.token.atrule, .token.attr-value, .token.keyword {
-  color: #40C4FF
-}
-
-.token.keyword {
-  color: #FF4081;
-}
-
-.token.function {
-  color: #FF4081
-}
-
-.token.important, .token.regex, .token.variable {
-  color: #FFCB6B
-}
-
-.token.bold, .token.important {
-  font-weight: 700
-}
-
-.token.italic {
-  font-style: italic
-}
-
-.token.entity {
-  cursor: help
-}
+code[class*=language-],pre[class*=language-]{color:#f8f8f2;background:0 0;text-align:left;white-space:pre;word-spacing:normal;word-break:normal;word-wrap:normal;line-height:1.5;-moz-tab-size:4;-o-tab-size:4;tab-size:4;-webkit-hyphens:none;-moz-hyphens:none;-ms-hyphens:none;hyphens:none}pre,pre[class*=language-]{padding:1em;margin:.5em 0;overflow:auto;border-radius:.3em}:not(pre)>code[class*=language-],pre,pre[class*=language-]{background:var(--codeBackground);color:#f8f8f2}:not(pre)>code[class*=language-]{padding:.1em;border-radius:.3em;white-space:normal}.token.cdata,.token.comment,.token.doctype,.token.prolog{color:#d4d0ab}.token.punctuation{color:#fefefe}.token.constant,.token.deleted,.token.property,.token.symbol,.token.tag{color:#ffa07a}.token.boolean,.token.number{color:#00e0e0}.token.attr-name,.token.builtin,.token.char,.token.inserted,.token.selector,.token.string{color:#abe338}.language-css .token.string,.style .token.string,.token.entity,.token.operator,.token.url,.token.variable{color:#00e0e0}.token.atrule,.token.attr-value,.token.function{color:gold}.token.keyword{color:#00e0e0}.token.important,.token.regex{color:gold}.token.bold,.token.important{font-weight:700}.token.italic{font-style:italic}.token.entity{cursor:help}
