--- a/src/utils/theme/theme.css
+++ b/src/utils/theme/theme.css
@@ -20,7 +20,7 @@
     --primary: #FF5252;
     --secondary: #00B0FF;
     --shadowColor: rgba(0, 0, 0, 0.25);
-    --text: #37474F;
+    --text: #1F282C;
     --textOnPrimary: #FFFFFF;
     --textOnSecondary: #FFFFFF;
     --textSecondary: #78909C;
