:art: Use Avenir Next on top of Avenir as a default font

--- a/src/components/pages/index/SectionTitle/styles.module.css
+++ b/src/components/pages/index/SectionTitle/styles.module.css
@@ -6,7 +6,7 @@
 
 .sectionSubtitle {
   color: var(--textSecondary);
-  font-weight: 300;
+  font-weight: 400;;
   text-align: center;
   margin: 0;
   margin-bottom: 1.5em;
