--- a/src/utils/theme/theme.css
+++ b/src/utils/theme/theme.css
@@ -32,9 +32,9 @@ body,
 html {
   background-color: var(--background);
   color: var(--text);
-  font-family: Avenir, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: Avenir Next, Avenir, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   font-size: 16px;
-  font-weight: 300;
+  font-weight: 400;
   line-height: 1.5;
   margin: 0;
   overflow-x: hidden;
@@ -87,7 +87,7 @@ strong {
 }
 
 p {
-  font-weight: 300;
+  font-weight: 400;;
 }
 
 section {
