--- a/src/components/shared/Layout/Footer/styles.module.css
+++ b/src/components/shared/Layout/Footer/styles.module.css
@@ -17,6 +17,10 @@
   justify-content: space-between;
 }
 
+.links a {
+  color: var(--textSecondary);
+}
+
 .links li {
   padding: 0;
   margin: 0;
