:wheelchair: Use heading elements on sequentially descending order
:wheelchair: Use heading elements on sequentially descending order

--- a/src/components/pages/index/SectionTitle/styles.module.css
+++ b/src/components/pages/index/SectionTitle/styles.module.css
@@ -2,11 +2,12 @@
   font-size: 2em;
   text-align: center;
   margin: 0;
+  font-weight: 700;
 }
 
 .sectionSubtitle {
   color: var(--textSecondary);
-  font-weight: 400;;
+  font-weight: 400;
   text-align: center;
   margin: 0;
   margin-bottom: 1.5em;
