--- a/src/components/shared/SectionTitle/styles.module.css
+++ b/src/components/shared/SectionTitle/styles.module.css
@@ -4,6 +4,10 @@
   font-weight: 700;
 }
 
+.sectionTitleMargin {
+  margin: 1em 0;
+}
+
 .sectionSubtitle {
   color: var(--textSecondary);
   font-weight: 400;
