:sparkles: Add "about me" page (#212)
* :sparkles: Introduce staticData -> workExperience
* :sparkles: Add about page
* :sparkles: Add WorkExperience to About page
* :sparkles: Add About to Layout/Menu
* :recycle: Move SectionTitle as a shared component
* :sparkles: Add Education section to about page
* :sparkles: Add WhoAmI to about page
* :wrench: Add about page to sitemap script
* :sparkles: Add contact section to about page
* :art: Standard fixes
* :white_check_mark: Add specs
* :wrench: Add about page to lighthouserc

--- a/src/components/shared/SectionTitle/styles.module.css
+++ b/src/components/shared/SectionTitle/styles.module.css
@@ -1,14 +1,20 @@
 .sectionTitle {
   font-size: 2em;
-  text-align: center;
   margin: 0;
   font-weight: 700;
+}
+
+.sectionTitleMargin {
+  margin: 1em 0;
 }
 
 .sectionSubtitle {
   color: var(--textSecondary);
   font-weight: 400;
-  text-align: center;
   margin: 0;
   margin-bottom: 1.5em;
+}
+
+.isCentered {
+  text-align: center;
 }
