--- a/src/components/shared/BlogPost/styles.module.css
+++ b/src/components/shared/BlogPost/styles.module.css
@@ -42,6 +42,19 @@
   width: 100%;
 }
 
+.postImage:global(.lazyload) {
+  /*
+    This technique is extracted from: https://css-tricks.com/aspect-ratio-boxes/
+    Basically it rellies on create a friendly-aspect ratio 2:1 box. To avoid CLS
+    on image LQPI load.
+
+    The 50% value comes from making an 2:1 ratio image. (2 / 1) * 100%;
+  */
+  height: 0;
+  padding-top: 50%;
+  background-color: var(--backgroundSurface);
+}
+
 .postImage:global(.lazyloaded) {
   filter: blur(0);
 }
