🚸 Use scroll-snap to improve UX at writings section

--- a/src/components/pages/index/Writings/styles.module.css
+++ b/src/components/pages/index/Writings/styles.module.css
@@ -4,6 +4,7 @@
   */
   flex-wrap: nowrap!important;
   overflow-x: scroll;
+  scroll-snap-type: x mandatory;
 }
 
 .scrollablePosts:global(::-webkit-scrollbar) {
