--- a/src/components/shared/Layout/NavigationMenu/styles.module.css
+++ b/src/components/shared/Layout/NavigationMenu/styles.module.css
@@ -2,6 +2,9 @@
   background-color: var(--background);
   box-shadow: 0 1px 2px var(--shadowColor);
   padding: 0.75em 0;
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -38,13 +41,6 @@
 @media (max-width: 768px) {
   .header {
     padding: 0.5em 0;
-    position: fixed;
-    width: 100%;
-    z-index: 1;
-  }
-
-  .headerFixedSpacing {
-    height: 64px;
   }
 
   .links {
