--- a/src/components/shared/Layout/NavigationMenu/styles.module.css
+++ b/src/components/shared/Layout/NavigationMenu/styles.module.css
@@ -15,15 +15,17 @@
 }
 
 .logo {
-  font-size: 1.5em;
-}
-
-.logo a {
+  align-items: center;
+  color: var(--text);
+  display: flex;
+  font-size: 1.15rem;
+  font-weight: bold;
   text-decoration: none;
 }
 
-.logo a:hover {
-  text-decoration: none;
+.avatar {
+  border-radius: 50%;
+  margin-right: 1rem;
 }
 
 .navigation {
