--- a/src/components/shared/Layout/NavigationMenu/styles.module.css
+++ b/src/components/shared/Layout/NavigationMenu/styles.module.css
@@ -1,6 +1,6 @@
 .header {
-  background-color: var(--background);
-  box-shadow: 0 1px 2px var(--shadowColor);
+  backdrop-filter: saturate(180%) blur(20px);
+  background-color: var(--backgroundWithTransparency);
   padding: 0.75em 0;
   position: sticky;
   top: 0;
@@ -10,7 +10,6 @@
 @media (prefers-color-scheme: dark) {
   .header {
     box-shadow: none;
-    background-color: var(--backgroundSurface);
   }
 }
 
