:lipstick: Add backdrop-filter and transparency to Header

--- a/src/components/shared/Layout/NavigationMenu/styles.module.css
+++ b/src/components/shared/Layout/NavigationMenu/styles.module.css
@@ -1,5 +1,6 @@
 .header {
   backdrop-filter: saturate(180%) blur(20px);
+  box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.12);
   background-color: var(--backgroundWithTransparency);
   padding: 0.75em 0;
   position: sticky;
@@ -42,6 +43,7 @@
 @media (max-width: 768px) {
   .header {
     padding: 0.5em 0;
+    backdrop-filter: unset;
   }
 
   .links {
