--- a/src/components/shared/Layout/NavigationMenu/Hamburger/styles.module.css
+++ b/src/components/shared/Layout/NavigationMenu/Hamburger/styles.module.css
@@ -16,11 +16,11 @@
   display: flex;
   font: inherit;
   margin: 0;
-  padding: 0.75em;
+  padding: 0.75rem;
 }
 
 .closeContainer {
-  padding: 0.5em 1.5em;
+  padding: 0.5em 1.5rem;
   position: absolute;
   right: 0;
 }
@@ -34,7 +34,7 @@
   margin: 0;
   padding: 0;
   list-style-type: none;
-  font-size: 2em;
+  font-size: 2rem;
   flex-direction: column;
 }
 
