💄 Improve site header (#348)
* :lipstick: Make NavigationMenu sticky
* :sparkles: Add avatar to NavigationMenu Logo
* :lipstick: Add backgroundWithOpacity to NavigationMenu
* :lipstick: Add backdrop-filter and transparency to Header
* :lipstick: Update NavigationMenu interaction states
* :art: Use rems instead of ems at Hamburguer

--- a/src/components/pages/index/OpenSource/Project/styles.module.css
+++ b/src/components/pages/index/OpenSource/Project/styles.module.css
@@ -33,7 +33,7 @@
   }
 
   .project:hover {
-    background-color: var(--shadowColor);
+    background-color: var(--backgroundElevation);
     box-shadow: none;
   }
 }
