--- a/src/components/shared/BlogPost/styles.module.css
+++ b/src/components/shared/BlogPost/styles.module.css
@@ -25,7 +25,7 @@
   }
 
   .post:hover {
-    background-color: var(--shadowColor);
+    background-color: var(--backgroundElevation);
     box-shadow: none;
   }
 }
