--- a/src/components/shared/Layout/NavigationMenu/styles.module.css
+++ b/src/components/shared/Layout/NavigationMenu/styles.module.css
@@ -1,26 +1,40 @@
 .header {
-  background-color: var(--background);
-  box-shadow: 0 1px 2px var(--shadowColor);
+  backdrop-filter: saturate(180%) blur(20px);
+  box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.12);
+  background-color: var(--backgroundWithTransparency);
   padding: 0.75em 0;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
+
+/* On Chrome Desktop, setting a backdrop-filter makes the fixed children
+  position relative to parent. Works good on Chrome mobile, so this is weird.
+
+  https://stackoverflow.com/questions/52937708/why-does-applying-a-css-filter-on-the-parent-break-the-child-positioning
+*/
+.disableBackdropFilter {
+  backdrop-filter: unset;
 }
 
 @media (prefers-color-scheme: dark) {
   .header {
     box-shadow: none;
-    background-color: var(--backgroundSurface);
   }
 }
 
 .logo {
-  font-size: 1.5em;
-}
-
-.logo a {
+  align-items: center;
+  color: var(--text);
+  display: flex;
+  font-size: 1.15rem;
+  font-weight: bold;
   text-decoration: none;
 }
 
-.logo a:hover {
-  text-decoration: none;
+.avatar {
+  border-radius: 50%;
+  margin-right: 1rem;
 }
 
 .navigation {
@@ -35,16 +49,13 @@
   margin: 0;
 }
 
+.links li {
+  margin: 0;
+}
+
 @media (max-width: 768px) {
   .header {
     padding: 0.5em 0;
-    position: fixed;
-    width: 100%;
-    z-index: 1;
-  }
-
-  .headerFixedSpacing {
-    height: 64px;
   }
 
   .links {
