--- a/src/components/pages/index/Header/styles.module.css
+++ b/src/components/pages/index/Header/styles.module.css
@@ -1,23 +1,49 @@
-.header {
-  padding: 4em;
-  text-align: center;
+.container {
+  padding: 5rem 0rem;
 }
 
-.name {
-  color: var(--primary);
-  display: inline;
-  font-size: 4em;
-  padding: 0 .25em;
+.title {
+  margin: 0;
+  font-size: 3.25em;
+  display: inline-block;
+  padding: 0;
 }
 
-.headline {
-  font-size: 4em;
-  font-weight: 700;
+.wave {
+  animation-duration: 1.2s;
+  animation-iteration-count: infinite;
+  animation-name: wave;
+  display: inline-block;
+  transform-origin: 70% 70%;
+  font-size: 3rem;
+  margin-left: 1rem;
 }
 
-.job {
+.bio {
+  font-size: 1.5rem;
   font-weight: 400;
-  margin: 1.25rem 0;
+  margin: 0;
+  max-width: 456px;
+  padding-top: .5rem;
+}
+
+@media (max-width: 768px) {
+  .container {
+    padding-top: 4rem;
+  }
+
+  .title {
+    font-size: 2.5rem;
+    padding-bottom: 1rem;
+  }
+
+  .bio {
+    font-size: 1.5rem;
+  }
+
+  .wave {
+    display: none;
+  }
 }
 
 @keyframes wave {
@@ -28,26 +54,4 @@
   40% { transform: rotate(  9.0deg) }
   50% { transform: rotate(  0.0deg) }
   100% { transform: rotate(  0.0deg) }
-}
-
-.wave {
-  animation-duration: 1.8s;
-  animation-iteration-count: infinite;
-  animation-name: wave;
-  display: inline-block;
-  transform-origin: 70% 70%;
-}
-
-@media (max-width: 768px) {
-  .header {
-    padding: 4em 1.5em;
-  }
-
-  .name, .headline {
-    font-size: 3em;
-  }
-
-  .job {
-    font-size: 2em;
-  }
 }
