--- a/src/components/pages/index/OpenSource/Project/styles.module.css
+++ b/src/components/pages/index/OpenSource/Project/styles.module.css
@@ -3,27 +3,26 @@
 }
 
 .project {
-  border-radius: 2px;
+  border-radius: .25rem;
   border-top-color: var(--textSecondary);
-  border-top: 4px solid;
+  border-top: .25rem solid;
   box-shadow: 0 1px 4px var(--shadowColor);
   color: var(--text);
   flex: 1;
-  margin-bottom: 1em;
-  padding: 2.5em;
+  margin-bottom: 1rem;
+  padding: 2.5rem;
   text-decoration: none;
   transition: all 0.2s ease-out;
 }
 
 @media(max-width: 768px) {
   .project {
-    padding: 1.5em;
+    padding: 1.5rem;
   }
 }
 
 .project:hover {
-  box-shadow: 0 8px 16px var(--shadowColor);
-  transform: translateY(-1px);
+  box-shadow: 0 .5rem 1rem var(--shadowColor);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -51,6 +50,6 @@
 }
 
 .starEmoji {
-  font-size: .95em;
-  padding-right: .75em;
+  font-size: .95rem;
+  padding-right: .75rem;
 }
