:lipstick: Improve link hover interaction

--- a/src/components/pages/index/OpenSource/Project/styles.module.css
+++ b/src/components/pages/index/OpenSource/Project/styles.module.css
@@ -23,6 +23,8 @@
 
 .project:hover {
   box-shadow: 0 .5rem 1rem var(--shadowColor);
+  color: inherit;
+  text-decoration: inherit;
 }
 
 @media (prefers-color-scheme: dark) {
