--- a/src/components/shared/Layout/NavigationMenu/styles.module.css
+++ b/src/components/shared/Layout/NavigationMenu/styles.module.css
@@ -32,6 +32,10 @@
   text-decoration: none;
 }
 
+.logo:hover {
+  text-decoration: inherit;
+}
+
 .avatar {
   border-radius: 50%;
   margin-right: 1rem;
