--- a/src/components/pages/index/Contact/styles.module.css
+++ b/src/components/pages/index/Contact/styles.module.css
@@ -4,6 +4,21 @@
 }
 
 .text {
-  font-size: 1.125em;
+  font-size: 1.125rem;
+  padding-bottom: 1rem;
   text-align: center;
+}
+
+.button {
+  background-color: var(--secondary);
+  border-radius: 2rem;
+  color: var(--textOnPrimary);
+  cursor: pointer;
+  padding: .5rem 1.5rem;
+  text-decoration: none;
+  transition: box-shadow 0.2s ease-out;
+}
+
+.button:hover {
+  text-decoration: inherit;
 }
