🚸 Improve Writings scroll buttons UX

--- a/src/components/pages/index/Writings/ScrollButtons/styles.module.css
+++ b/src/components/pages/index/Writings/ScrollButtons/styles.module.css
@@ -27,6 +27,10 @@
   opacity: 0.5;
 }
 
+.button:disabled {
+  visibility: hidden;
+}
+
 @media (max-width: 768px) {
   .button {
     padding: .5em 0;
