--- a/src/components/pages/index/Contact/styles.module.css
+++ b/src/components/pages/index/Contact/styles.module.css
@@ -1,17 +1,15 @@
 .wrapper {
   max-width: 600px;
-  margin: 0 auto;
 }
 
 .text {
   font-size: 1.125rem;
   padding-bottom: 1rem;
-  text-align: center;
 }
 
 .button {
   background-color: var(--secondary);
-  border-radius: 2rem;
+  border-radius: .25rem;
   color: var(--textOnPrimary);
   cursor: pointer;
   padding: .5rem 1.5rem;
