--- a/src/pages/404/styles.module.css
+++ b/src/pages/404/styles.module.css
@@ -1,6 +1,7 @@
 .headline {
   color: var(--primary);
-  font-size: 4em;
+  font-size: 5rem;
+  margin-top: 0;
 }
 
 .error {
@@ -8,9 +9,9 @@
 }
 
 .title {
-  font-weight: 400;;
+  font-weight: 400;
 }
 
 .links {
-  font-size: 1.5em;
+  font-size: 1.5rem;
 }
