:sparkles: Add readingTime into Post data

--- a/src/components/pages/blog/[slug]/Header/styles.module.css
+++ b/src/components/pages/blog/[slug]/Header/styles.module.css
@@ -6,8 +6,13 @@
   margin-bottom: .25em;
 }
 
-.time {
-  text-transform: uppercase;
+.time, .readingTime {
   color: var(--textSecondary);
   font-size: 0.85em;
+  text-transform: uppercase;
+}
+
+.readingTime::before {
+  content: "•";
+  padding: 0 .25rem;
 }
