--- a/public/prism/prism.css
+++ b/public/prism/prism.css
@@ -25,7 +25,7 @@ pre, pre[class*=language-] {
   font-weight: 700
 }
 
-.token.italic {
+.token.italic, .token.parameter {
   font-style: italic
 }
 
@@ -33,58 +33,55 @@ pre, pre[class*=language-] {
   cursor: help
 }
 
-@media (prefers-color-scheme: dark) {
-  code[class*=language-], pre[class*=language-] {
-    color: #f8f8f2;
-    background: 0 0;
-  }
-
-  :not(pre)>code[class*=language-], pre, pre[class*=language-] {
-    background: var(--codeBackground);
-    color: #f8f8f2
-  }
-
-  :not(pre)>code[class*=language-] {
-    padding: .1em;
-    border-radius: .3em;
-    white-space: normal
-  }
-
-  .token.cdata, .token.comment, .token.doctype, .token.prolog {
-    color: #d4d0ab
-  }
-
-  .token.punctuation {
-    color: #fefefe
-  }
-
-  .token.constant, .token.deleted, .token.property, .token.symbol, .token.tag {
-    color: #ffa07a
-  }
-
-  .token.boolean, .token.number {
-    color: #00e0e0
-  }
-
-  .token.attr-name, .token.builtin, .token.char, .token.inserted, .token.selector, .token.string {
-    color: #abe338
-  }
-
-  .language-css .token.string, .style .token.string, .token.entity, .token.operator, .token.url, .token.variable {
-    color: #00e0e0
-  }
-
-  .token.atrule, .token.attr-value, .token.function {
-    color: gold
-  }
-
-  .token.keyword {
-    color: #00e0e0
-  }
-
-  .token.important, .token.regex {
-    color: gold
-  }
+.token.operator {
+  font-family: Fira Code, Operator Mono, Consolas, monospace;
 }
 
-@media (prefers-color-scheme: light) {}
+/* Syntax Highlighting */
+
+:not(pre)>code[class*=language-], pre, pre[class*=language-] {
+  background: var(--codeBackground);
+  color: #f8f8f2
+}
+
+:not(pre)>code[class*=language-] {
+  padding: .1em;
+  border-radius: .3em;
+  white-space: normal
+}
+
+.token.cdata, .token.comment, .token.doctype, .token.prolog {
+  color: #4d5257;
+}
+
+.token.punctuation {
+  color: #C5C8C6;
+}
+
+.token.deleted, .token.property, .token.symbol, .token.tag, .token.number, .token.operator.arrow, .token.parameter, .token.class-name.console {
+  color: #FF5252;
+}
+
+.token.boolean, .token.keyword.module, .token.operator, .token.keyword.control-flow, .token.regex, .token.keyword.nil.null {
+  color: #FF4081;
+}
+
+.token.punctuation.interpolation-punctuation, .token.function + .token.operator  {
+  color: #00E5FF;
+}
+
+.token.builtin, .token.char, .token.inserted, .token.selector, .token.string, .token.attr-value {
+  color: #D4E157
+}
+
+.token.script .token.tag, .token.language-javascript.script .token.property-access, .token.constant {
+  color: #ffffff;
+}
+
+.token.keyword, .language-js .token.property-access, .token.language-javascript.script {
+  color: #40C4FF;
+}
+
+.token.function, .token.attr-name, .property-access.function.method, .token.class-name, .token.language-javascript.script .token.property-access.function.method {
+  color: #FFCB6B;
+}
