--- a/src/utils/theme/theme.css
+++ b/src/utils/theme/theme.css
@@ -11,7 +11,7 @@
     --textOnPrimary: #FFFFFF;
     --textOnSecondary: #FFFFFF;
     --textSecondary: #93A6AF;
-    --codeBackground: #121212;
+    --codeBackground: #1d1f21;
     --languageJavaScript: #FBDD51;
     --languageShell: #89E051;
     --languageCss: #7e57c2;
@@ -32,7 +32,7 @@
     --textOnPrimary: #FFFFFF;
     --textOnSecondary: #FFFFFF;
     --textSecondary: #6b7280;
-    --codeBackground: #121212;
+    --codeBackground: #1d1f21;
     --languageJavaScript: #FBDD51;
     --languageShell: #89E051;
     --languageCss: #7e57c2;
