--- a/src/components/pages/uses/SetupImage/styles.module.css
+++ b/src/components/pages/uses/SetupImage/styles.module.css
@@ -5,6 +5,7 @@
   transition: filter 200ms ease-in-out;
   border-radius: 4px;
   max-width: 100%;
+  margin: 1rem 0;
 }
 
 .image:global(.lazyloaded) {
