--- a/src/components/pages/uses/SetupImage/styles.module.css
+++ b/src/components/pages/uses/SetupImage/styles.module.css
@@ -6,6 +6,8 @@
   border-radius: 4px;
   max-width: 100%;
   margin: 1rem 0;
+  aspect-ratio: 4 / 3;
+  height: auto;
 }
 
 .image:global(.lazyloaded) {
