💄 Improve `table` elements in mobile

--- a/src/utils/theme/theme.css
+++ b/src/utils/theme/theme.css
@@ -183,6 +183,10 @@ hr {
   outline: none;
 }
 
+.postDetail .responsiveTable {
+  overflow-x: auto;
+}
+
 .postDetail table {
   width: 100%;
   border-collapse: collapse;
