✨ Add TS language repo project styles

--- a/src/components/pages/index/OpenSource/Project/styles.module.css
+++ b/src/components/pages/index/OpenSource/Project/styles.module.css
@@ -59,6 +59,10 @@
   border-top-color: var(--languageJavaScript);
 }
 
+.project:global(.typescript) {
+  border-top-color: var(--languageTypeScript);
+}
+
 .project:global(.shell) {
   border-top-color: var(--languageShell);
 }
