--- a/src/utils/theme/theme.css
+++ b/src/utils/theme/theme.css
@@ -13,6 +13,7 @@
     --textSecondary: #93A6AF;
     --codeBackground: #1d1f21;
     --languageJavaScript: #FBDD51;
+    --languageTypeScript: #3178c6;
     --languageShell: #89E051;
     --languageCss: #7e57c2;
     --languageHtml: #ff7043;
@@ -34,6 +35,7 @@
     --textSecondary: #6b7280;
     --codeBackground: #1d1f21;
     --languageJavaScript: #FBDD51;
+    --languageTypeScript: #3178c6;
     --languageShell: #89E051;
     --languageCss: #7e57c2;
     --languageHtml: #ff7043;
