--- a/src/components/pages/opensource/Repositories/styles.module.css
+++ b/src/components/pages/opensource/Repositories/styles.module.css
@@ -51,6 +51,10 @@
   border-left-color: var(--languageJavaScript);
 }
 
+.list li:global(.typescript) {
+  border-left-color: var(--languageTypeScript);
+}
+
 .list li:global(.shell) {
   border-left-color: var(--languageShell);
 }
