--- a/src/utils/theme/theme.css
+++ b/src/utils/theme/theme.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @media (prefers-color-scheme: dark) {
   html {
     --background: #000000;
